Initial code to receive data

--- a/config.ini
+++ b/config.ini
@@ -25,8 +25,5 @@ SpreadingFactor: 12
 CodingRate: 5
 
 # HW Settings of RFM9x
-PinCS: CS1
+PinCS: CE0
 PinReset: D25
-PinSpiSCK: SCK
-PinSpiMISO: MISO
-PinSpiMOSI: MOSI
